cambio de background image

--- a/Práctica 02/practica02_ejercicio02.htm
+++ b/Práctica 02/practica02_ejercicio02.htm
@@ -4,7 +4,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   	<title>Juegos - Disfruta de los mejores juegos gratis en Zylom.com</title>
-    <meta property="og:image" content="http://cdn.ghstatic.com/images/logo/zylom/250x250.png">
+    <meta property="og:image" content="">
     <link rel="canonical" href="file:///C:/Users/alexandre/Documents/UGR/PW/Juegos%20%20Template%20Perfecto_files/Juegos%20%20Template%20Perfecto.htm">
     <link href="./practica02_ejercicio02_files/deluxe.css" rel="stylesheet" type="text/css">
   	<link href="./practica02_ejercicio02_files/mainstyles.css" rel="stylesheet" type="text/css">
@@ -31,7 +31,7 @@
 
 
   <style type="text/css">
-  	body {background: #0086DD url(http://cdn.ghstatic.com/images/deluxe/hpto/gutter/es/3228.jpg) center 0px no-repeat;}
+  	body {background: #0086DD url(images/bg_image2.png) center 0px no-repeat;}
   </style>
 
 <link href="./practica02_ejercicio02_files/spotlightbox_styles.css" rel="stylesheet" type="text/css"><script type="text/javascript">
@@ -771,192 +771,16 @@ checkPlugin();
 
 
 <div id="footer">
-    <a id="sitenavigation_footer"></a>
-  <div class="footermenu clearfix">
-    <div class="footermenuitem footermenuitem_1">
-      <h3>Menú</h3>
-      <ul class="footermenulist">
-        <li><a href="file:///C:/Users/alexandre/Documents/UGR/PW/Juegos%20%20Template%20Perfecto_files/Juegos%20%20Template%20Perfecto.htm">Página de inicio</a></li>
-        <li><a href="http://www.zylom.com/es/juegos-descargar/">Descargable</a></li>
-        <li><a href="http://www.zylom.com/es/juegos-online-gratis/">Online</a></li>
-        <li><a href="http://www.zylom.com/es/funpass/">FunPass</a></li>
-        <li><a href="http://www.zylom.com/es/juegos/juegos-para-windows-8/?special=win8">Juegos para Windows 8</a></li>
-        <li><a href="http://www.zylom.com/es/juegos/touchscreen-games/?special=touch"></a></li>
-        <li><a href="http://www.zylom.com/es/juegos/tablet-games/?special=tablet"></a></li>
-        <li><a href="http://www.zylom.com/es/promo/supermarket/">Rincón de las Ofertas Zylom</a></li>
-        <li><a href="http://www.zylom.com/es/zylom-gifts/">Juegos Zylom Gift</a></li>
-        <li><a href="http://www.zylom.com/es/promo/doublepack/">Zylom Double Packs</a></li>
-        <li><a href="http://www.zylom.com/es/juegos-descargar/superpacks/">Zylom Super Packs</a></li>
-        <li><a href="http://www.zylom.com/es/juegos-delicious/">Juegos episódicos</a></li>
 
-        <li><a href="http://www.zylom.com/es/juegos/multijugador/">Juegos multijugador</a></li>
-        <li><a href="http://www.zylom.com/es/facebook/">Facebook</a></li>
-        <li><a href="http://www.zylom.com/es/registration/general_login.jsp?s=deluxe">Iniciar sesión</a></li>
-          <li><a href="http://www.zylom.com/es/registration/general_register.jsp?s=deluxe">Regístrate gratis</a></li>
-          </ul>
-    </div>
-    <div class="footermenuitem footermenuitem_2">
-      <h3>Categorías</h3>
-      <ul class="footermenulist">
-        <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/juegos-de-cartas/" title="Cartas">
-                Cartas</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/rompecabezas/" title="Rompecabezas">
-                Rompecabezas</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/3-en-raya/" title="3 en raya">
-                3 en raya</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Gestión">
-                Gestión</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/bubble/" title="Bubble">
-                Bubble</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/juegos-de-tablero/" title="Tablero">
-                Tablero</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/juegos-buscar-objetos/" title="Buscar objetos">
-                Buscar objetos</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/descargar-juegos/juegos-de-accion/" title="Acción">
-                Acción</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/juegos-casino/?sec=download" title="Juegos de casino">
-                Casino</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/rdeluxe.jsp?g=14&a=true" title="Todos los juegos para descargar">
-                Todos los juegos para descargar</a>
-            </li>
-            <li>
-              <a href="http://www.zylom.com/es/rplay.jsp?g=14&a=true" title="Todos los juegos en línea">
-                Todos los juegos en línea</a>
-            </li>
-      </ul>
-    </div>
-    <div class="footermenuitem footermenuitem_3">
-      <h3>Ayuda</h3>
-      <ul class="footermenulist">
-        <li><a href="http://www.zylom.com/es/ayuda/">Ayuda</a></li>
-          <li><a href="http://www.zylom.com/es/ayuda/section/9/?sid=9">Ayuda - FunPass</a></li>
-        <li><a href="http://www.zylom.com/es/ayuda/section/8/?sid=8">Ayuda - Comprar y (re)activar juegos Deluxe</a></li>
-        <li><a href="http://www.zylom.com/es/ayuda/section/7/?sid=7">Ayuda - Jugar a juegos Deluxe gratis</a></li>
+ </div>
 
-        <li><a href="http://www.zylom.com/es/ayuda/section/5/?sid=5">Ayuda - Juegos online</a></li>
-        <li><a href="http://www.zylom.com/es/ayuda/section/11/?sid=11">Ayuda - Juegos episódicos</a></li>
-        <li><a href="http://www.zylom.com/es/ayuda/contact/7/?sid=7">Ponte en contacto</a></li>
-        <li><a href="http://www.zylom.com/es/ayuda/section/6/?sid=6">Mis datos</a></li>
-        <li><a href="http://www.zylom.com/es/registration/general_login.jsp?e=forgotpassword&s=deluxe">He olvidado mi nombre de usuario y/o contraseña</a></li>
-      </ul>
-    </div>
-    <div class="footermenuitem footermenuitem_4">
-      <h3>Síguenos</h3>
-      <ul class="footermenulist">
-        <li><a href="https://www.facebook.com/zylom" target="_blank">Página del Zylom Games Fan Club en Facebook</a></li>
-        <li><a href="https://www.facebook.com/DeliciousGames" target="_blank">Página de Delicious Games en Facebook</a></li>
-        <li><a href="http://www.twitter.com/zylom" target="_blank">Zylom en Twitter</a></li>
-        <li><a href="http://www.youtube.com/zylomgames" target="_blank">Zylom en YouTube</a></li>
-        <li><a href="https://secure2.zylom.com/myaccount/14/#emailpref">Recibe nuestros boletines</a></li>
-      </ul>
-    </div>
-  </div>
-  <p style="margin: 0px; padding: 0px;"><a href="http://www.zylom.com/es/privacy/" class="optfooterlinks" title="Política de privacidad">
-         Política de privacidad</a> |
-     <a href="http://www.zylom.com/es/servicio/" class="optfooterlinks" title="condiciones de servicio">
-        condiciones de servicio</a> |
-     <a href="http://www.realgames-advertising.com/" class="optfooterlinks" title="advertising EU">
-         advertising EU</a> |
-     <a href="http://demo.zylom.com/zylom_business_website/site/partnerships/partnerships.html" class="optfooterlinks" title="partner program">
-        partner program</a> |
-     <a href="http://www.zylom.com/es/about_us.jsp" class="optfooterlinks" title="Acerca de Zylom" rel="nofollow">
-        Acerca de Zylom</a> |
-     <a href="http://www.zylom.com/es/sitemap" class="optfooterlinks" title="sitemap">
-        sitemap</a>
-    <br>
-    <br>
-  </p>
-  <p align="center" class="footercopyright">
-      copyright © 2001-<script type="text/javascript">document.write(new Date().getFullYear());</script>20132013 GameHouse Europe. All Rights Reserved Zylom® and the Zylom logo are registered trademarks of GameHouse Europe.
-  </p>
-  <p class="footerlogos">
-    <a href="http://www.zylom.com/es/about_us.jsp" id="gamehouse_logo" class="sprite_common_image"></a>
-    <img src="./practica02_ejercicio02_files/wotylogo_small.jpg" class="wotylogo" alt="website of the year" width="59" height="56">
-    </p><br>
+  <br>
+</div>
 
-<!-- Comscore ALL -->
-<!-- Begin comScore Tag --><script> var _comscore = _comscore || []; _comscore.push({ c1: "7", c2: "6331765", c3: "3" }); (function() {       var s = document.createElement("script"), el = document.getElementsByTagName("script")[0]; s.async = true; s.src = (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js"; el.parentNode.insertBefore(s, el); })();</script><noscript> &amp;lt;img src="http://b.scorecardresearch.com/p?c1=7&amp;amp;c2=6331765&amp;amp;c3=3&amp;amp;cv=2.0&amp;amp;cj=1" /&amp;gt;</noscript><!-- End comScore Tag --></div>
-  <div id="footerclose" class="sprite_common_image">&nbsp;</div>
+<div id="footerclose" class="sprite_common_image">&nbsp;</div>
 </div>
 </div>
 
 <div class="popup_overlay" id="popup_overlay"><a class="close"></a>
 	<div class="contentWrap"></div>
 </div>
-
-<script type="text/javascript">
-
-$("a.popup[rel]").overlay({
-    mask: '#999999',
-    fixed: false,
-    closeOnEsc: true,
-    closeOnClick: true,
-    onBeforeLoad: function() {
-        var wrap = this.getOverlay().find(".contentWrap");
-        wrap.load(this.getTrigger().attr("href"));
-    },
-    onClose: function() {
-        var wrap = this.getOverlay().find(".contentWrap");
-        wrap.html('');
-    }
-});
-
-function closeAllPopups()
-{
-    $("a.popup[rel]").each(function() {
-        $(this).overlay().close();
-    });
-}
-</script>
-<script type="text/javascript">
-  $(document).ready(function(){
-    $(".ad").mouseenter(function () {
-      $(".ad_full").stop().animate({height: '275px'});
-    });
-    $(".floor_wrapper").mouseleave(function () {
-      $(".ad_full").stop().animate({height: '15px'});
-    });
-    $(".ad_close").click(function () {
-      $(".ad_full").stop().animate({height: '15px'});
-    });
-  });
-</script>
-
-<div class="floor_wrapper">
-    <div class="floorad" onclick="location.href=&#39;/es/promo/bonbon/&#39;">
-        <div class="ad_txt">¡Elige y gana un descuento!</div>
-        <div class="ad" style="background: url(&#39;http://cdn.ghstatic.com/images/site/zylom/promo/bonbon/floorad/thumbnail.png&#39;) no-repeat;">
-          &nbsp;
-        </div>
-      </div>
-      <div class="ad_full" style="height: 15px; display: block;">
-        <div onclick="location.href=&#39;/es/promo/bonbon/&#39;">
-          <div class="ad_header">¡Elige y gana un descuento!</div>
-          <div class="ad_image"><img src="./practica02_ejercicio02_files/promo_image.jpg" border="0" height="125" width="125"></div>
-          <div class="ad_text">¿Te gusta el dulce? ·Elige 3 bombones de la caja y recibe un descuento de hasta el 90%!</div>
-          <div class="ad_readmore">¡Haz clic aquí ahora!</div>
-        </div>
-        <a class="ad_close">&nbsp;</a>
-      </div>
-      </div>
-
-<ul class="ui-autocomplete ui-menu ui-widget ui-widget-content ui-corner-all" role="listbox" aria-activedescendant="ui-active-menuitem" style="z-index: 2; top: 0px; left: 0px; display: none;"></ul><ul class="ui-autocomplete ui-menu ui-widget ui-widget-content ui-corner-all" role="listbox" aria-activedescendant="ui-active-menuitem" style="z-index: 2; top: 0px; left: 0px; display: none;"></ul></body></html>
