stripping out JS

--- a/Práctica 02/practica02_ejercicio02.htm
+++ b/Práctica 02/practica02_ejercicio02.htm
@@ -2,10 +2,9 @@
 
 <html lang="es">
 	<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  	<title>Juegos - Disfruta de los mejores juegos gratis en Zylom.com</title>
-    <meta property="og:image" content="">
-    <link rel="canonical" href="file:///C:/Users/alexandre/Documents/UGR/PW/Juegos%20%20Template%20Perfecto_files/Juegos%20%20Template%20Perfecto.htm">
+
+  	<title>juegos gratis en Zylom.com</title>
+
     <link href="./practica02_ejercicio02_files/deluxe.css" rel="stylesheet" type="text/css">
   	<link href="./practica02_ejercicio02_files/mainstyles.css" rel="stylesheet" type="text/css">
   	<link href="./practica02_ejercicio02_files/topnavigationstyles.css" rel="stylesheet" type="text/css">
@@ -21,8 +20,12 @@
 
   	<link href="./practica02_ejercicio02_files/topnavigationstyles(1).css" rel="stylesheet" type="text/css">
 
-  	<link href="https://plus.google.com/u/0/b/117558178045281593870/117558178045281593870/" rel="publisher">
-  	<script async="" src="./practica02_ejercicio02_files/beacon.js"></script><script type="text/javascript" async="" src="./practica02_ejercicio02_files/ga.js"></script><script type="text/javascript" async="" src="./practica02_ejercicio02_files/inpage_linkid.js" id="undefined"></script><script async="" src="./practica02_ejercicio02_files/beacon(1).js"></script><script id="facebook-jssdk" src="./practica02_ejercicio02_files/all.js"></script><script type="text/javascript" async="" src="./practica02_ejercicio02_files/ga(1).js"></script><script src="./practica02_ejercicio02_files/jquery.min.js"></script>
+  	<script async="" src="./practica02_ejercicio02_files/beacon.js"></script>
+  	<script type="text/javascript" async="" src="./practica02_ejercicio02_files/ga.js"></script>
+  	<script type="text/javascript" async="" src="./practica02_ejercicio02_files/inpage_linkid.js" id="undefined"></script>
+  	<script async="" src="./practica02_ejercicio02_files/beacon(1).js"></script>
+  	<script type="text/javascript" async="" src="./practica02_ejercicio02_files/ga(1).js"></script>
+  	<script src="./practica02_ejercicio02_files/jquery.min.js"></script>
   	<script src="./practica02_ejercicio02_files/jquery-ui.min.js"></script>
   	<script src="./practica02_ejercicio02_files/jquery.tools.overlay.min.js"></script>
   	<script src="./practica02_ejercicio02_files/ogmapi.min.js" type="text/javascript"></script>
@@ -36,7 +39,6 @@
 
 <link href="./practica02_ejercicio02_files/spotlightbox_styles.css" rel="stylesheet" type="text/css"><script type="text/javascript">
 
-checkPlugin();
 </script>
 
 
