--- a/Práctica 02/practica02_ejercicio02.htm
+++ b/Práctica 02/practica02_ejercicio02.htm
@@ -5,11 +5,7 @@
 
   	<title>juegos gratis en Zylom.com</title>
 
-  	<link href="./practica02_ejercicio02_files/mainstyles.css" rel="stylesheet" type="text/css">
-  	<link href="./practica02_ejercicio02_files/topnavigationstyles.css" rel="stylesheet" type="text/css">
-  	<link href="./practica02_ejercicio02_files/search.css" rel="stylesheet" type="text/css">
-  	<link href="./practica02_ejercicio02_files/fixedbox_layoutstyles.css" rel="stylesheet" type="text/css">
-  	<link href="./practica02_ejercicio02_files/topnavigationstyles(1).css" rel="stylesheet" type="text/css">
+	<link href="./css/estilo02.css" rel="stylesheet" type="text/css">
 
   	<style type="text/css">
 		body {	background:  url(images/bg_image6.jpg) center 0px no-repeat;}
@@ -99,7 +95,8 @@
 					<script src="./practica02_ejercicio02_files/imageswap.js" type="text/javascript"></script>
 
 					<div id="leftcolumn" class="clearfix">
-      					<script type="text/javascript" src="./practica02_ejercicio02_files/ajax.js"></script><script type="text/javascript">
+      					<script type="text/javascript" src="./practica02_ejercicio02_files/ajax.js"></script>
+      					<script type="text/javascript">
 							var tabForVisitLogging = -1
 							var viewTab =new Array(true,true,true,true,true,true);
 							function logPageVisit(cid) {
@@ -259,16 +256,9 @@
         						<div class="tooltip">
         							<p>Juega en Zylom.com a los mejores juegos buscar y encontrar gratis.</p>
         						</div>
-        						<script type="text/javascript">
-									$(".tooltip0").tooltip({relative:"true", offset:[0,20], position:"bottom left"});
-									$(".tooltip0").mouseover(function() {
-									$(this).parents('div').css('z-index', 1); //because IE is stupid
-									$('.headerinfo .tooltip').css('z-index', 1000);
-									});
-								</script>
 							</div>
 							<h2>
-								<a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-buscar-objetos/" title="Juegos de buscar objetos">Juegos de buscar objetos</a>
+								Juegos de buscar objetos
 							</h2>
 						</div>
 					</div>
@@ -331,9 +321,8 @@
 								</li>
 							</ul>
 							<div class="gamelistmoregames">
-								<a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-buscar-objetos/" title="Todos los juegos de buscar objetos">
-									Todos los juegos de buscar objetos
-								</a>
+								Todos los juegos de buscar objetos
+
 							</div>
 						</div>
 					</div>
@@ -355,13 +344,7 @@
 									<div class="tooltip">
 										<p>Haz combinaciones y ábrete paso en nuestros juegos de 3 en raya gratis.</p>
 									</div>
-									<script type="text/javascript">
-										$(".tooltip1").tooltip({relative:"true", offset:[0,20], position:"bottom left"});
-										$(".tooltip1").mouseover(function() {
-										$(this).parents('div').css('z-index', 1); //because IE is stupid
-										$('.headerinfo .tooltip').css('z-index', 1000);
-										});
-									</script>
+
 								</div>
 								<h2>
 									<a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/3-en-raya/" title="Juegos de 3 en raya">Juegos de 3 en raya</a>
