changing top panel image

--- a/Práctica 02/practica02_ejercicio02.htm
+++ b/Práctica 02/practica02_ejercicio02.htm
@@ -11,9 +11,6 @@
 		body {	background:  url(images/bg_image6.jpg) center 0px no-repeat;}
 	</style>
 
-	<link href="./practica02_ejercicio02_files/spotlightbox_styles.css" rel="stylesheet" type="text/css">
-
-
 </head>
 
 <body style="leftmargin:0px; topmargin:0px; marginwidth:0px; marginheight:0px;">
@@ -127,12 +124,12 @@
 							<div id="spotlightcorner_lb"></div>
 							<div id="spotlightcorner_rb"></div>
 							<div class="spotlightpromo" id="promo1" style="">
-							<div class="spotlightsinglegameplacer" style="background: transparent url(http://cdn.ghstatic.com/images/deluxe/hpto/spotlight/es/3228.jpg) no-repeat">
-								<a href="http://www.zylom.com/es/ractiontracking_v2.jsp?url=%2Fes%2Fdescargar-juegos%2Fjuegos-de-accion%2Fjuegos-de-aventura%2Fgardens-inc-from-rakes-to-riches-deluxe%2F&atkid=122&atsid=1" onfocus="blur()" class="clickbox" onclick="_gaq.push([&#39;_trackEvent&#39;, &#39;Carrousel&#39;, &#39;GAME - Gardens Inc. - From Rakes to Riches Deluxe - DLX&#39;, &#39;usergroupid_42&#39;,, false]);">&nbsp;</a>
+							<div class="spotlightsinglegameplacer" style="background: transparent url(images/panel_img2.jpg) no-repeat">
+
 							</div>
 							<script>$("#promo01").attr('sourceID',1);</script>
 							<div class="spotlight_loginoverlay">
-								<div>Acuérdate de iniciar sesión para ver juegos y ofertas que te interesen</div>
+								<div> Blues High Temperature, Red Giants Lower Temperature</div>
 								<a href="javascript:removeLoginOverlay()">&nbsp;</a>
 							</div>
 						</div>
