body style into CSS

--- a/Práctica 02/index02.html
+++ b/Práctica 02/index02.html
@@ -3,17 +3,14 @@
 <html lang="es">
 	<head>
 
-  	<title>juegos gratis en Zylom.com</title>
+  	<title>LoremIpsum.com</title>
 
-	<link href="./css/estilo02.css" rel="stylesheet" type="text/css">
+	<link href="css/estilo02.css" rel="stylesheet" type="text/css">
 
-  	<style type="text/css">
-		body {	background:  url(images/bg_image6.jpg) center 0px no-repeat;}
-	</style>
 
 </head>
 
-<body style="leftmargin:0px; topmargin:0px; marginwidth:0px; marginheight:0px;">
+<body id="body_bg_img" style="leftmargin:0px; topmargin:0px; marginwidth:0px; marginheight:0px;">
 
 
 	<div id="sitewrapper">
