--- a/Práctica 02/index02.html
+++ b/Práctica 02/index02.html
@@ -20,18 +20,18 @@
 
 			<div id="headernavigation" class="orange">
 				<div id="logo">
-					<a class="logolink" href="file:///C:/Users/alexandre/Documents/UGR/PW/Juegos%20%20Template%20Perfecto_files/Juegos%20%20Template%20Perfecto.htm" onclick="actionTrackingHeader(1)">&nbsp;</a>
-					<a class="textlink" href="file:///C:/Users/alexandre/Documents/UGR/PW/Juegos%20%20Template%20Perfecto_files/Juegos%20%20Template%20Perfecto.htm" onclick="actionTrackingHeader(1)">&nbsp;</a>
+					<a class="logolink" href="" >&nbsp;</a>
+					<a class="textlink" href="">&nbsp;</a>
 				</div>
 				<div id="headernavigationchoosecountry">
-					<a href="http://www.zylom.com/choosecountry.jsp" rel="nofollow" class="smallblack" title="Otro idioma /Other language">Otro idioma /Other language</a>
+					Aliud Eloquiorum
 				</div>
 				<div id="headernavigationbuttons">
-					<a href="" onclick="actionTrackingHeader(2)" title="Descargable" class="download"><span>Descargable</span></a>
-					<a href="" onclick="actionTrackingHeader(3)" title="Online" class="play"><span>Online</span></a>
-					<a href="" title="Ofertas" class="offer"><span>Ofertas</span></a>
-					<a href="" onclick="actionTrackingHeader(5)" title="FunPass" class="funpass"><span>FunPass</span></a>
-					<a href="" onclick="actionTrackingHeader(6)" title="Ayuda" class="support"><span>Ayuda</span></a>
+					<a href=""  class="download"><span>Finibus </span></a>
+					<a href=""  class="play"><span>Bonorum </span></a>
+					<a href=""  class="offer"><span>Malorum</span></a>
+					<a href=""  class="funpass"><span>Elementum </span></a>
+					<a href=""  class="support"><span>Lorem</span></a>
 				</div>
 				<div id="headernavigationsubnavigation">
 					<ul id="submenunav">
@@ -72,12 +72,13 @@
 				 	<a href="" class="listingplayblue2 sprite_common_image">&nbsp;</a>
 			 	</form>
 
-		  	</div>
-		  	<div class="headerextralogin" style="padding-top: 2px; padding-left: 5px;">
-			</div>
-		  	<div class="headerextramyaccount" style="padding-top: 2px;">
-			  <a href="">Regístrate gratis</a><span style="font-weight: bold; font-size:11px;">|</span>
-			  <a href="">Iniciar sesión</a></div>
+		  		</div>
+		  		<div class="headerextralogin" style="padding-top: 2px; padding-left: 5px;">
+				</div>
+				<div class="headerextramyaccount" style="padding-top: 2px;">
+				  <a href="">Tabulae</a><span id="tabulae">|</span>
+				  <a href="">Registerium</a>
+				</div>
 	  		</div>
 
   			<div class="headerbar orange"></div>
@@ -85,8 +86,6 @@
 
   			<div id="content" class="clearfix">
   				<div id="centercolumn" class="clearfix">
-					<script src="./practica02_ejercicio02_files/deluxedownload.js" type="text/javascript"></script>
-					<script src="./practica02_ejercicio02_files/imageswap.js" type="text/javascript"></script>
 
 					<div id="leftcolumn" class="clearfix">
 
@@ -101,7 +100,7 @@
 								<div class="spotlightsinglegameplacer" style="background: transparent url(images/panel_img2.jpg) no-repeat"></div>
 								<div class="spotlight_loginoverlay">
 									<div> Caliditas Hyacintho, Rubrum Gigas humilis temperatus</div>
-									<a href="javascript:removeLoginOverlay()">&nbsp;</a>
+									<a href="">&nbsp;</a>
 								</div>
 							</div>
 							<div class="spotlightpromo" id="promo2" style="display: none;">
