--- a/Práctica 02/index02.html
+++ b/Práctica 02/index02.html
@@ -6,7 +6,12 @@
   	<title>LoremIpsum.com</title>
 
 	<link href="css/estilo02.css" rel="stylesheet" type="text/css">
-
+	<link href="css/topnavigation.css" rel="stylesheet" type="text/css">
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/spotlight.css" rel="stylesheet" type="text/css">
+	<link href="css/search.css" rel="stylesheet" type="text/css">
+	<link href="css/topnavigation1.css" rel="stylesheet" type="text/css">
+	<link href="css/fixedbox.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -16,7 +21,6 @@
 	<div id="sitewrapper">
 
 		<div id="sitecontainer">
-
 
 			<div id="headernavigation" class="orange">
 				<div id="logo">
@@ -62,20 +66,17 @@
 			</div>
 			</div>
 			<div id="headerextra" class="orange" style="position: relative;">
-		  		<style>
-			  	.ui-menu-item {background-image:none;}
-		  		</style>
 
-		  	<div class="searchbox" style="float:left; width:200px;">
+		  	<div class="searchbox" >
 			 	<form method="" name="" action="" style="float: left; padding-bottom: 5px;">
-				 	<input type="text" name="" id="" class="input ui-autocomplete-input" style="margin-top: 2px; border: 1px solid #ccdcee; width: 155px;" placeholder="expecto ludum" role="textbox" >
+				 	<input type="text" name="" id="" class="input ui-autocomplete-input" style="margin-top: 2px; border: 1px solid #ccdcee; width: 155px;" value="expecto ludum" >
 				 	<a href="" class="listingplayblue2 sprite_common_image">&nbsp;</a>
 			 	</form>
 
 		  		</div>
-		  		<div class="headerextralogin" style="padding-top: 2px; padding-left: 5px;">
+		  		<div class="headerextralogin" >
 				</div>
-				<div class="headerextramyaccount" style="padding-top: 2px;">
+				<div class="headerextramyaccount" >
 				  <a href="">Tabulae</a><span id="tabulae">|</span>
 				  <a href="">Registerium</a>
 				</div>
@@ -96,6 +97,7 @@
 							<div id="spotlightcorner_ru"></div>
 							<div id="spotlightcorner_lb"></div>
 							<div id="spotlightcorner_rb"></div>
+
 							<div class="spotlightpromo" id="promo1" style="">
 								<div class="spotlightsinglegameplacer" style="background: transparent url(images/panel_img2.jpg) no-repeat"></div>
 								<div class="spotlight_loginoverlay">
@@ -111,16 +113,16 @@
 
 						<div class="spotlightcontrol">
 							<div class="spotlightcontrolitems">
-								<a href="" id="tab1" class="spotlight_tab1_active">&nbsp;</a>
-								<a href="" id="tab2" class="spotlight_tab2">&nbsp;</a>
-								<a href="" id="tab3" class="spotlight_tab3">&nbsp;</a>
+								<a href=""  class="spotlight_tab1_active">&nbsp;</a>
+								<a href=""  class="spotlight_tab2">&nbsp;</a>
+								<a href=""  class="spotlight_tab3">&nbsp;</a>
 							</div>
-							<div id="promocurrentitem" class="spotlightcontrolcurrentitem">
+							<div  class="spotlightcontrolcurrentitem">
 								Lorem ipsum dolor sit adipisicing
 							</div>
 							<div class="spotlightcontrolbuttons">
 								<a href="" class="spotlight_previous">&nbsp;</a>
-								<a href="" id="spotlight_playpause" class="spotlight_play">&nbsp;</a>
+								<a href="" class="spotlight_play">&nbsp;</a>
 								<a href="" class="spotlight_next">&nbsp;</a>
 							</div>
 						</div>
@@ -132,26 +134,14 @@
 
           				<h1>Lorem ipsum dolor sit amet consectetur </h1>
           				¡Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua....
-          				<span class="moreinfo_tooltip">Duis aute irure »</span>
+
         		</div>
 
-        		<div class="box258 box258orange box_singlelink boxorange dynamic_box">
+        		<div class="box258 box258orange boxorange dynamic_box">
 
         			<div class="boxheader_container">
         				<div class="boxheader" style="height:34px;">
         					<div class="boxheader_right"></div>
-
-							<!--
-							<div class="headerinfo headerinfo_orange" style="top:10px;">
-        						<span class="tooltip0">info</span>
-        						<div class="tooltip">
-        							<p>Juega en Zylom.com a los mejores juegos buscar y encontrar gratis.</p>
-        						</div>        						<div class="tooltip">
-        							<p>Juega en Zylom.com a los mejores juegos buscar y encontrar gratis.</p>
-        						</div>
-        					</div>
-        					-->
-
 
 							<h2>
 								Magna Civitas
@@ -161,6 +151,7 @@
 
 					<div class="boxcontent_container">
 						<div class="boxcontent_right"></div>
+
 						<div class="boxcontent gamelistbox">
 							<ul>
 								<li class="gamelistitem">
@@ -230,7 +221,7 @@
 							<div class="boxbottom_right"></div>
 						</div>
 					</div>
-					</div>
+				</div>
 
 					<div class="box258 box258orange box_singlelink boxorange dynamic_box">
 						<div class="boxheader_container">
