--- a/Práctica 02/table_left_column.html
+++ b/Práctica 02/table_left_column.html
@@ -14,7 +14,7 @@
 		<div class="leftcolumn">
 
 			<!-- First Row -->
-			<div class="box258brown_left">
+			<div class="box258left">
 				<div class="box258brown_header">
 					<div class="box258brown_header_title"> Title</div>
 					<div class="box258brown_top_left"></div>
@@ -22,8 +22,8 @@
 					<div class="box258brown_top_right"></div>
 				</div>
 				<div class="box258middle">
-					<div class="box258middle_left"></div>
-					<div class="box258middle_right"></div>
+					<div class="box258brown_middle_left"></div>
+					<div class="box258brown_middle_right"></div>
 				</div>
 				<div class="box258brown_footer">
 					<div class="box258brown_bottom_left"></div>
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 
-			<div class="box258brown_right">
+			<div class="box258right">
 				<div class="box258brown_header">
 					<div class="box258brown_header_title"> Title</div>
 					<div class="box258brown_top_left"></div>
@@ -40,8 +40,8 @@
 					<div class="box258brown_top_right"></div>
 				</div>
 				<div class="box258middle">
-					<div class="box258middle_left"></div>
-					<div class="box258middle_right"></div>
+					<div class="box258brown_middle_left"></div>
+					<div class="box258brown_middle_right"></div>
 				</div>
 				<div class="box258brown_footer">
 					<div class="box258brown_bottom_left"></div>
@@ -51,45 +51,89 @@
 			</div>
 
 			<!-- Second Row -->
-			<div class="box258brown_left">
-				<div class="box258brown_header">
-					<div class="box258brown_header_title"> Title</div>
-					<div class="box258brown_top_left"></div>
-					<div class="box258brown_fill"></div>
-					<div class="box258brown_top_right"></div>
+			<div class="box258left">
+				<div class="box258green_header">
+					<div class="box258green_header_title"> Title</div>
+					<div class="box258green_top_left"></div>
+					<div class="box258green_fill"></div>
+					<div class="box258green_top_right"></div>
 				</div>
 				<div class="box258middle">
-					<div class="box258middle_left"></div>
-					<div class="box258middle_right"></div>
+					<div class="box258green_middle_left"></div>
+					<div class="box258green_middle_right"></div>
 				</div>
-				<div class="box258brown_footer">
-					<div class="box258brown_bottom_left"></div>
-					<div class="box258brown_bottom_fill"></div>
-					<div class="box258brown_bottom_right"></div>
+				<div class="box258green_footer">
+					<div class="box258green_bottom_left"></div>
+					<div class="box258green_bottom_fill"></div>
+					<div class="box258green_bottom_right"></div>
 				</div>
 			</div>
 
-			<div class="box258brown_right">
-				<div class="box258brown_header">
-					<div class="box258brown_header_title"> Title</div>
-					<div class="box258brown_top_left"></div>
-					<div class="box258brown_fill"></div>
-					<div class="box258brown_top_right"></div>
+			<div class="box258right">
+				<div class="box258green_header">
+					<div class="box258green_header_title"> Title</div>
+					<div class="box258green_top_left"></div>
+					<div class="box258green_fill"></div>
+					<div class="box258green_top_right"></div>
 				</div>
 				<div class="box258middle">
-					<div class="box258middle_left"></div>
-					<div class="box258middle_right"></div>
+					<div class="box258green_middle_left"></div>
+					  blah bla
+					<div class="box258green_middle_right"></div>
+					<div class="clearer"></div>
+					<div class="box258green_middle_left"></div>
+					  blah bla
+					<div class="box258green_middle_right"></div>
+					<div class="clearer"></div>
+					<div class="box258green_middle_left"></div>
+					  blah bla
+					<div class="box258green_middle_right"></div>
 				</div>
-				<div class="box258brown_footer">
-					<div class="box258brown_bottom_left"></div>
-					<div class="box258brown_bottom_fill"></div>
-					<div class="box258brown_bottom_right"></div>
+				<div class="box258green_footer">
+					<div class="box258green_bottom_left"></div>
+					<div class="box258green_bottom_fill"></div>
+					<div class="box258green_bottom_right"></div>
 				</div>
 			</div>
 		</div>
 
 		<div class="rightcolumn">
 
+			<div class="box200brown">
+				<div class="box200brown_header">
+					<div class="box200brown_header_title"> Title</div>
+					<div class="box200brown_top_left"></div>
+					<div class="box200brown_fill"></div>
+					<div class="box200brown_top_right"></div>
+				</div>
+				<div class="box258middle">
+					<div class="box200middle_left"></div>
+					<div class="box200middle_right"></div>
+				</div>
+				<div class="box258brown_footer">
+					<div class="box200brown_bottom_left"></div>
+					<div class="box200brown_bottom_fill"></div>
+					<div class="box200brown_bottom_right"></div>
+				</div>
+			</div>
+
+			<div class="box200brown">
+				<div class="box200brown_header">
+					<div class="box200brown_header_title"> Title</div>
+					<div class="box200brown_top_left"></div>
+					<div class="box200brown_fill"></div>
+					<div class="box200brown_top_right"></div>
+				</div>
+				<div class="box258middle">
+					<div class="box200middle_left"></div>
+					<div class="box200middle_right"></div>
+				</div>
+				<div class="box258brown_footer">
+					<div class="box200brown_bottom_left"></div>
+					<div class="box200brown_bottom_fill"></div>
+					<div class="box200brown_bottom_right"></div>
+				</div>
+			</div>
 
 
 		</div>
