added clearer <div> to fix box issue

--- a/Práctica 02/table_left_column.html
+++ b/Práctica 02/table_left_column.html
@@ -86,9 +86,13 @@
 					<div class="box258green_middle_right"></div>
 					<div class="clearer"></div>
 					<div class="box258green_middle_left"></div>
-					  blah bla
+					  .
 					<div class="box258green_middle_right"></div>
+
 				</div>
+
+				<div class="clearer"></div>
+
 				<div class="box258green_footer">
 					<div class="box258green_bottom_left"></div>
 					<div class="box258green_bottom_fill"></div>
