--- a/Práctica 02/index02.html
+++ b/Práctica 02/index02.html
@@ -139,7 +139,7 @@
           					¡Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua....
         				</div>
 
-						<div class="box258 box258orange boxorange dynamic_box">
+						<div class="box258right">
 
 							<div class="boxheader_container">
 								<div class="boxheader" style="height:34px;">
