iNTEGRATION IN PROGRESS

--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -304,19 +304,19 @@
     <div id="rightcolumn" class="clearfix">
 
 
-  		<div class="sideadpromo" style="background: transparent url(http://cdn.ghstatic.com/images/site/zylom/multiplayer/side_banner/es/side_ad.jpg) top center no-repeat;">
-      		<a class="sidead_click" href="">&nbsp;</a>
+  		<div class="sideadpromo" style="">
+
     	</div>
 
     	<div class="sub_headline2">
-				Sub Headline
+			Nebulae
 		</div>
 
 
         <div class="box200brown">
 
 			<div class="box200brown_header">
-				<div class="box200brown_header_title"> Juegos nuevos</div>
+				<div class="box200brown_header_title">Martem Unum</div>
 				<div class="box200brown_top_left"></div>
 				<div class="box200brown_fill"></div>
 				<div class="box200brown_top_right"></div>
@@ -361,7 +361,7 @@
         <div class="box200brown">
 
 			<div class="box200brown_header">
-				<div class="box200brown_header_title"> Juegos nuevos</div>
+				<div class="box200brown_header_title">Martem Unum</div>
 				<div class="box200brown_top_left"></div>
 				<div class="box200brown_fill"></div>
 				<div class="box200brown_top_right"></div>
@@ -403,7 +403,7 @@
 
 
 
-	<p class="players" style="text-align:center;">8939 jugadores en línea</p>
+	<p class="players" style="text-align:center;">MMXXIII Martem Unum</p>
 
 </div>
 </div>
