work in progress

--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -403,11 +403,10 @@
 
 
 
-	<p class="players" style="text-align:center;">MMXXIII Martem Unum</p>
+		<p class="players" style="text-align:center;">MMXXIII Martem Unum</p>
 
+	</div>
 </div>
-</div>
-
 
 
 <div id="footer">
@@ -417,10 +416,10 @@
   <br>
 </div>
 
-<div id="footerclose" class="sprite_common_image">&nbsp;</div>
+
 </div>
 </div>
 
-<div class="popup_overlay" id="popup_overlay"><a class="close"></a>
-	<div class="contentWrap"></div>
-</div>
+
+</body>
+</html>
