work in progress css clustering

--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
-<html lang="es">
+<html lang="latin">
 	<head>
 
   	<title>LoremIpsum.com</title>
 
 	<link href="css/estilo02.css" rel="stylesheet" type="text/css">
 	<link href="css/topnavigation.css" rel="stylesheet" type="text/css">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<link href="css/topnavigation1.css" rel="stylesheet" type="text/css">
+
 	<link href="css/spotlight.css" rel="stylesheet" type="text/css">
 	<!--
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/topnavigation1.css" rel="stylesheet" type="text/css">
 	<link href="css/search.css" rel="stylesheet" type="text/css">
 	<link href="css/fixedbox.css" rel="stylesheet" type="text/css">
 	-->
@@ -19,11 +20,11 @@
 <body id="body_bg_img" style="leftmargin:0px; topmargin:0px; marginwidth:0px; marginheight:0px;">
 
 
-	<div id="sitewrapper">
+	<div id="main_div">
 
-		<div id="sitecontainer">
+		<div id="main_container">
 
-			<div id="headernavigation" class="orange">
+			<div id="top_menu_container" class="orange">
 				<div id="logo">
 					<a class="logolink" href="" >&nbsp;</a>
 					<a class="textlink" href="">&nbsp;</a>
@@ -31,12 +32,12 @@
 				<div id="headernavigationchoosecountry">
 					Aliud Eloquiorum
 				</div>
-				<div id="headernavigationbuttons">
-					<a href=""  class="download"><span>Finibus </span></a>
-					<a href=""  class="play"><span>Bonorum </span></a>
-					<a href=""  class="offer"><span>Malorum</span></a>
-					<a href=""  class="funpass"><span>Elementum </span></a>
-					<a href=""  class="support"><span>Lorem</span></a>
+				<div id="horizontal_main_menu">
+					<a href=""  class="menu1"><span>Finibus </span></a>
+					<a href=""  class="menu2"><span>Bonorum </span></a>
+					<a href=""  class="menu3"><span>Malorum</span></a>
+					<a href=""  class="menu4"><span>Elementum </span></a>
+					<a href=""  class="menu5"><span>Lorem</span></a>
 				</div>
 				<div id="headernavigationsubnavigation">
 					<ul id="submenunav">
@@ -71,15 +72,14 @@
 		  	<div class="searchbox" >
 			 	<form method="" name="" action="" style="float: left; padding-bottom: 5px;">
 				 	<input type="text" name="" id="" class="input ui-autocomplete-input" style="margin-top: 2px; border: 1px solid #ccdcee; width: 155px;" value="expecto ludum" >
-				 	<a href="" class="listingplayblue2 sprite_common_image">&nbsp;</a>
+				 	<a href="" class="listingplayblue2 mag_glass">&nbsp;</a>
 			 	</form>
 
 		  		</div>
-		  		<div class="headerextralogin" >
-				</div>
+
 				<div class="headerextramyaccount" >
-				  <a href="">Tabulae</a><span id="tabulae">|</span>
-				  <a href="">Registerium</a>
+				  <a href="">Tabulae </a>
+				  <a href="">Registerium<span id="tabulae">|</span></a>
 				</div>
 	  		</div>
 
