--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -6,10 +6,11 @@
   	<title>LoremIpsum.com</title>
 
 	<link href="css/estilo02.css" rel="stylesheet" type="text/css">
-	<link href="css/topnavigation.css" rel="stylesheet" type="text/css">
-
 	<link href="css/spotlight.css" rel="stylesheet" type="text/css">
+
+
 	<!--
+	<link href="css/topnavigation.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="css/topnavigation1.css" rel="stylesheet" type="text/css">
 	<link href="css/search.css" rel="stylesheet" type="text/css">
@@ -17,7 +18,7 @@
 	-->
 </head>
 
-<body id="body_bg_img" style="leftmargin:0px; topmargin:0px; marginwidth:0px; marginheight:0px;">
+<body id="body_bg_img">
 
 
 	<div id="main_div">
@@ -25,13 +26,11 @@
 		<div id="main_container">
 
 			<div id="top_menu_container" class="orange">
-				<div id="logo">
-					<a class="logolink" href="" >&nbsp;</a>
-					<a class="textlink" href="">&nbsp;</a>
-				</div>
+
 				<div id="headernavigationchoosecountry">
 					Aliud Eloquiorum
 				</div>
+
 				<div id="horizontal_main_menu">
 					<a href=""  class="menu1"><span>Finibus </span></a>
 					<a href=""  class="menu2"><span>Bonorum </span></a>
