populating boxes with games

--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -8,14 +8,6 @@
 	<link href="css/estilo02.css" rel="stylesheet" type="text/css">
 	<link href="css/spotlight.css" rel="stylesheet" type="text/css">
 
-
-	<!--
-	<link href="css/topnavigation.css" rel="stylesheet" type="text/css">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<link href="css/topnavigation1.css" rel="stylesheet" type="text/css">
-	<link href="css/search.css" rel="stylesheet" type="text/css">
-	<link href="css/fixedbox.css" rel="stylesheet" type="text/css">
-	-->
 </head>
 
 <body id="body_bg_img">
@@ -132,8 +124,6 @@
 
 						</div>
 
-
-
 						<div class="sub_headline1">
           					<h1>Lorem ipsum dolor sit amet consectetur </h1>
           					¡Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua....
@@ -145,6 +135,7 @@
 						<div class="box258left">
 
 							<div class="box258brown_header">
+
 								<div class="box258brown_header_title"> Magna Civitas</div>
 								<div class="box258brown_top_left"></div>
 								<div class="box258brown_fill"></div>
@@ -154,16 +145,17 @@
 
 							<div class="box258middle">
 								<div class="box258brown_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_red1.jpg">  Jogus 1
 								<div class="box258brown_middle_right"></div>
+
 								<div class="clearer"></div>
+
 								<div class="box258brown_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_yellow1.jpg">  Jogus 2
 								<div class="box258brown_middle_right"></div>
+
 								<div class="clearer"></div>
-								<div class="box258brown_middle_left"></div>
-								  .
-								<div class="box258brown_middle_right"></div>
+
 							</div>
 
 
@@ -190,16 +182,14 @@
 
 							<div class="box258middle">
 								<div class="box258brown_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_blue1.jpg">  Jogus 3
 								<div class="box258brown_middle_right"></div>
 								<div class="clearer"></div>
 								<div class="box258brown_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_green1.jpg">  Jogus 4
 								<div class="box258brown_middle_right"></div>
 								<div class="clearer"></div>
-								<div class="box258brown_middle_left"></div>
-								  .
-								<div class="box258brown_middle_right"></div>
+
 							</div>
 
 
@@ -228,15 +218,15 @@
 
 							<div class="box258middle">
 								<div class="box258green_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_green2.jpg">  Jogus 5
 								<div class="box258green_middle_right"></div>
 								<div class="clearer"></div>
 								<div class="box258green_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_yellow2.jpg">  Jogus 6
 								<div class="box258green_middle_right"></div>
 								<div class="clearer"></div>
 								<div class="box258green_middle_left"></div>
-								  .
+								 <img src="images/thumb_blue2.jpg">  Jogus 7
 								<div class="box258green_middle_right"></div>
 							</div>
 
@@ -264,15 +254,15 @@
 
 							<div class="box258middle">
 								<div class="box258green_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_orange1.jpg">  Jogus 7
 								<div class="box258green_middle_right"></div>
 								<div class="clearer"></div>
 								<div class="box258green_middle_left"></div>
-								  blah bla
+								  <img src="images/thumb_gray2.jpg">  Jogus 7
 								<div class="box258green_middle_right"></div>
 								<div class="clearer"></div>
 								<div class="box258green_middle_left"></div>
-								  .
+								  <img src="images/thumb_yellow3.jpg">  Jogus 7
 								<div class="box258green_middle_right"></div>
 							</div>
 
@@ -323,6 +313,7 @@
 
 			<div class="box258middle">
 				<div class="box200middle_left"></div>
+
 				<!--
 				<div class="boxcontent gamelistbox_2lines">
 					<ol>
