--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -311,41 +311,18 @@
 				<div class="box200brown_top_right"></div>
 			</div>
 
-			<div class="box258middle">
-				<div class="box200middle_left"></div>
-
-				<!--
-				<div class="boxcontent gamelistbox_2lines">
-					<ol>
-					  <li class="gamelistitem" style="height:49px;">
-							<a href="" >
-								<span class="gamelistgameimg" style="background: url() top left no-repeat">
-									<img src="images/overlay.gif" alt="Twisted Lands - Shadow Town" title="Twisted Lands - Shadow Town" style="border:0; width:60px; height:45px; align:center;">
-								</span>
-								<div class="gamelistgamename">
-									Twisted Lands - Sha...
-								</div>
-								<div class="gamelistplay">
-									sed quia e jugatus gratus
-								</div>
-							</a>
-						</li>
-					</ol>
-					<div class="gamelistmoregames">
-						<a href="" title="Más juegos">Más juegos</a>
-					</div>
-				</div>
-				-->
-				<div class="box200middle_right"></div>
+			<div class="box200brown_middle">
+				<div class="box200brown_middle_left"></div>
+						test
+				<div class="box200brown_middle_right"></div>
 			</div>
 
-			<div class="box258brown_footer">
+			<div class="box200brown_footer">
 				<div class="box200brown_bottom_left"></div>
 				<div class="box200brown_bottom_fill"></div>
 				<div class="box200brown_bottom_right"></div>
 			</div>
 		</div>
-
 
 
         <div class="box200brown">
@@ -357,9 +334,33 @@
 				<div class="box200brown_top_right"></div>
 			</div>
 
-			<div class="box258middle">
-				<div class="box200middle_left"></div>
+			<div class="box200brown_middle">
+				<div class="box200brown_middle_left"></div>
+						test 2
+				<div class="box200brown_middle_right"></div>
+			</div>
+
+			<div class="box200brown_footer">
+				<div class="box200brown_bottom_left"></div>
+				<div class="box200brown_bottom_fill"></div>
+				<div class="box200brown_bottom_right"></div>
+			</div>
+		</div>
+
+
 				<!--
+
+        <div class="box200brown">
+
+			<div class="box200brown_header">
+				<div class="box200brown_header_title">Martem Unum</div>
+				<div class="box200brown_top_left"></div>
+				<div class="box200brown_fill"></div>
+				<div class="box200brown_top_right"></div>
+			</div>
+
+			<div class="box200brown_middle">
+				<div class="box200brown_middle_left"></div>
 				<div class="boxcontent gamelistbox_2lines">
 					<ol>
 					  <li class="gamelistitem" style="height:49px;">
@@ -380,8 +381,7 @@
 						<a href="" title="Más juegos">Más juegos</a>
 					</div>
 				</div>
-				-->
-				<div class="box200middle_right"></div>
+				<div class="box200brown_middle_right"></div>
 			</div>
 
 			<div class="box258brown_footer">
@@ -391,6 +391,7 @@
 			</div>
 		</div>
 
+				-->
 
 
 		<p class="players" style="text-align:center;">MMXXIII Martem Unum</p>
