box200 height has been fixed

--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -313,7 +313,7 @@
 
 			<div class="box200brown_middle">
 				<div class="box200brown_middle_left"></div>
-						test
+						<img src="images/thumb_yellow3.jpg">  Jogus 7
 				<div class="box200brown_middle_right"></div>
 			</div>
 
