--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -313,9 +313,10 @@
 
 			<div class="box200brown_middle">
 				<div class="box200brown_middle_left"></div>
-						<img src="images/thumb_yellow3.jpg">  Jogus 7
+						<img src="images/thumb_blue4.jpg">  Jogus 7
 				<div class="box200brown_middle_right"></div>
 			</div>
+
 
 			<div class="box200brown_footer">
 				<div class="box200brown_bottom_left"></div>
@@ -336,7 +337,7 @@
 
 			<div class="box200brown_middle">
 				<div class="box200brown_middle_left"></div>
-						test 2
+				<img src="images/thumb_black1.jpg">  Jogus 7
 				<div class="box200brown_middle_right"></div>
 			</div>
 
